cleanup and readd another language

--- a/website/public/locales/pl.json
+++ b/website/public/locales/pl.json
@@ -17,70 +17,213 @@
 	"started": "Uruchomiono.",
 	"restartCanceledReasonBotStoppedByUser": "Ponowne uruchomienie anulowane powód: Bot został zatrzymany przez użytkownika.",
 	"restartDelay": "Proces bota zakończony... Czekanie 10 sekund przed ponownym uruchomieniem aby uniknąć spamu",
-	"Name": "Nazwa",
-	"Description": "Opis",
-	"Status": "Status",
-	"Start": "Włącz",
-	"Stop": "Wyłącz",
-	"Settings": "Ustawienia",
-	"Save": "Zapisz",
-	"Remove": "Usuń",
-	"Logs": "Logi",
-	"Link Discord": "Połącz z Discordem",
-	"Username": "Nazwa użytkownika",
-	"Password": "Hasło",
-	"Server": "Serwer",
-	"Plugins": "Wtyczki",
-	"System": "System",
-	"Horse Settings": "Ustawienia konia",
-	"Attack Settings": "Ustawienia ataku",
-	"Use Feather": "Używać piórek",
-	"Use Coin": "Używać monet",
-	"Use Time Skips": "Używać pomijaczy czasu",
-	"Attack Left Flank": "Atakować lewą flanke",
-	"Attack Middle": "Atakować środek",
-	"Attack Right Flank": "Atakować prawą flanke",
-	"Attack Courtyard": "Atakować dziedziniec",
-	"Max Waves": "Maksymalna ilość fal",
-	"Attack Delay (Seconds)": "Opóżnienie między atakami (Sekundy)",
-	"Attack Delay Randomization (Seconds)": "Zróżnicowanie czasu ataku (Sekundy)",
-	"Attack Barrons (Great Empire)": "Atakowanie Baronów (Wielkie Cesarstwo)",
-	"Attack Barrons (Fire Peaks)": "Atakowanie Baronów (Szczyty)",
-	"Attack Barrons (Glacier)": "Atakowanie Baronów (Zima)",
-	"Attack Barrons (Burning Sands)": "Atakowanie Baronów (Piaski)",
-	"Attack Fortress (Fire Peaks)": "Atakowanie fortec (Szczyty)",
-	"Attack Fortress (Everwinter Glacier)": "Atakowanie fortec (Zima)",
-	"Attack Fortress (Burning Sands)": "Atakowanie fortec (Piaski)",
-	"Attack Nomad Camps": "Atakowanie obozów nomadów",
-	"Attack Samurai Camps": "Atakowanie obozów samurajów",
-	"Attack Beri Camps": "Atakowanie obozów berimondu",
-	"Attack Khan": "Atakowanie chana",
-	"Attack Aqua Forts": "Atakowanie fortów na archipelagu",
-	"Hits Barrons": "Atakuje barony",
-	"Attack": "Atak",
-	"Handles Hits": "Obsługuje ataki",
+
+	"name": "Nazwa",
+	"status": "Status",
+	"start": "Włącz",
+	"stop": "Wyłącz",
+	"settings": "Ustawienia",
+	"save": "Zapisz",
+	"remove": "Usuń",
+	"logs": "Logi",
+	"link Discord": "Połącz z Discordem",
+	"username": "Nazwa użytkownika",
+	"password": "Hasło",
+	"server": "Serwer",
+	"plugins": "Wtyczki",
+	"system": "System",
 	"commander": "dowódca",
-	"Commander": "Dowódca",
-	"Res Send": "Wysyłanie zasobów",
-	"Ressend": "Wysyłanie zasobów",
-	"Feast": "Uczta",
-	"Mead replace": "Uzupełnianie miodu pitnego",
-	"MeadRep": "Uzupełnianie miodu",
-	"Timer": "Czasomierz",
-	"Discord": "Discord Bot",
-	"Outgoing": "Wychodzące",
-	"Fortress": "Forteca",
-	"Aqua Tower": "Fort na sztormie",
-	"Slash Commands": "Polecenia z ukośnikiem (Slash Commands)",
-	"Alert": "Alarm",
-	"Chat": "Chat",
-	"Aquaisland": "Wyspa na Sztormie",
-	"Hits fortresses": "Atakuje Fortece",
-	"Hits Aqua Forts": "Atakuje forty na akwie",
-	"Hits Nomad Camps": "Atakuje obozy nomada",
-	"Hits Samurai Camps": "Atakuje obozy samuraja",
-	"Hits Beri Camps": "Atakuje obozy berimondu",
-	"Hits Khan Camps": "Atakuje chana",
-	"Sends Resources": "Wysyła zasoby",
-	"Repair for Mead": "Uzupełnia miód pitny na zamku"
+
+	"feast" : "Uczta",
+	"meadReplace" : "Uzupełnianie miodu pitnego",
+	"resourceSend" : "Wysyłanie zasobów",
+	"timer": "Czasomierz",
+	"attack": "Atak",
+	"sharedBarronAttackLogic": "Barron",
+	"sharedFortressAttackLogic": "Fortress",
+	"incomingAttacks": "Alert",
+	"aquaIsland": "Wyspa na Sztormie",
+	"aquaTower": "Fort na sztormie",
+	"attackStormForts": "Atakowanie fortów na archipelagu",
+	"attackSamurai": "Atakowanie obozów samurajów",
+	"attackNomads": "Atakowanie obozów nomadów",
+	"attackKhan": "Atakowanie chana",
+	"attackBerimondInvasion": "Atakowanie obozów berimondu",
+	"attackBarronsBurningSands": "Atakowanie Baronów (Piaski)",
+	"attackBarronsEverWinterGlacier": "Atakowanie Baronów (Zima)",
+	"attackBarronsFirePeaks": "Atakowanie Baronów (Szczyty)",
+	"attackBarronsGreatEmpire": "Atakowanie Baronów (Wielkie Cesarstwo)",
+	"attackFortressesBurningSands": "Atakowanie fortec (Piaski)",
+	"attackFortressesEverWinterGlacier": "Atakowanie fortec (Zima)",
+	"attackFortressesFirePeaks": "Atakowanie fortec (Szczyty)",
+	"chat": "Chat",
+	"discord": "Discord",
+	"fortress": "Forteca",
+	"outgoingAttacks": "Wychodzące",
+	"slashCommands": "Polecenia z ukośnikiem",
+	"extraSlashCommands": "Polecenia z ukośnikiem",
+	"barracks": "Barracks",
+	"stationOnHit": "Station on hit",
+	"buyTools": "Buy tools",
+	"blacksmith": "Blacksmith",
+	"spendAffluence": "Spend Affluence",
+	"grandTornament": "Grand Tornament",
+	"externalEventHelper": "External event helper",
+	"helpRequests": "Help requests",
+	"nomadShop": "Nomad shop",
+	"samuraiShop": "Samurai shop",
+	"attackBerimondKingdom": "Attack Berimond (Kingdom)",
+	"ggeBot": "GGE Bot",
+	"botConfigReloaded": "Config has been reload",
+	"closedReason": "Closed forcefully reason: ",
+	"timedOut": " Timed out",
+	"errorCount": "Error Count: ",
+	"hitCount": "Hit count: ",
+	"retryLogin": "Retry Login in: ",
+	"retryLoginSeconds": " seconds",
+	"retryLoginHours": " hours",
+	"loggedIn": "Logged in",
+	"loggedInWithoutEventData": " (without event data)",
+	"featuresMightNotWork": "Some features might not work.",
+	"grabbedFortuneTellerFortune": "Grabbed fortune teller fortune",
+	"GrabbedOffering": "Grabbed offering: ",
+	"grabbedLudwig": "Ludwig",
+	"grabbedKnight": "Knight",
+	"grabbedBeatrice": "Beatrice",
+	"noMoreSkips": "No more skips",
+	"usingSkip": "Using Skip: ",
+	"couldntGetAsset": "Couldnt get asset falling back",
+	"consumed": "Consumed ",
+	"notEnoughFoodToFeast": "Not enough food to feast",
+	"wontRunWithoutStormUnlocked": "Won't run without storm unlocked",
+	"dontNeedToSendMead": "Don't need to send mead",
+	"notEnoughTimeForMeadReplace": "You may lose your troops aim above: ",
+	"hoursForFoodMeadReplace": " Hours of food consumption",
+	"dontNeedMeadForAnother": "Don't need mead for another: ",
+	"hoursMeadReplace": " hours",
+	"sentMeadReplace": "Sent ",
+	"meadToMeadReplace": "mead to ",
+	"failedToSendMead": "Failed to send Mead to ",
+	"sentResSend": "Sent ",
+	"toResSend": "to ",
+	"hoursOptionIsNotNumber": "Hours option is not number",
+	"noStablesCoinHorse": "No stables detected defaulting to walking",
+	"attackDelayAttack": "Attack delay: ",
+	"takingBreakPreventBan": "Taking a break to prevent ban for: ",
+	"failedToHandleAttack": "Failed to handle attack correctly: ",
+	"shuttingDownEvent": "Shutting down event reason: ",
+	"eventEnded": "Event Ended",
+	"hittingTargetAttack": "Hitting target ",
+	"tillImpactAttack": " till impact",
+	"broughtCoins": "Brought Coins",
+	"broughtDeco": "Brought Deco",
+	"broughtXP": "Brought XP",
+	"waitingForNextPossibleHit": "Waiting ",
+	"waitingForNextPossibleHit2": " for next possible hit",
+	"rageTooHigh": "Rage higher than expected",
+	"rageTrigger": "Rage Triggered",
+	"scoreReached": "Score Reached",
+	"noMatchingCommandWasFound": "No matching command was found ",
+	"noCommands": "No commands",
+	"missingChannel": "Missing Channel",
+	"barracksLevelNotDefined": "Level option was not defined",
+	"cantFindSourceCastle": "Could not find source castle",
+	"couldNotRecruitReason": "Could not recruit reason: ",
+	"couldNotRecruitReasonTroopLimitReached": "Troop limit reached",
+	"failedToRecruitTroops": "Failed to recruit troops at: ",
+	"recruitedTroops": " Troops recruited",
+	"shouldntRunOutOfSkips": "Shouldn't run out of skips",
+	"buyingFeathers": "Buying fast horse feathers",
+	"buying5MinuteSkips": "Buying 5 minute skips",
+	"laddersBrought": " Ladders brought",
+	"shieldsBrought": " Shields brought",
+	"couldntFindPlayer": "Could not find player",
+	"notFleeing": "Not Fleeing Reason: ",
+	"attackerTooWeak": "Attacker too weak",
+	"underBird": "Under bird",
+	"noobProtection": "Noob protection",
+	"cantSeeArmy": "Can't see army",
+	"troopCountTooSmall": "Troop count too small",
+	"tooLittleTroopsInCastle": "Too little troops in castle",
+	"noValidCastleChoice": "No valid castle choice",
+	"tryingToSend": "Trying to send ",
+	"tryingToSendTo": " To ",
+	"shopBuying": "Buying ",
+	"broughtShop": "Brought everything in shop",
+	"eventNotRunning": "Event not running",
+	"affluenceTicketsSpent": "Affluence Tickets Spent",
+	"couldNotOpenBerimond": "Could not open berimond need: 10k stone and wood",
+	"failedToSendTroopsOver": "Failed to send troops over",
+	"troopsMovedOver": " troops moved over",
+	"couldntGatherTools": "Could not gather tools",
+	"tryingToReroll": "Trying to reroll: ",
+	"loading": "loading...",
+	"couldntFindSkip": "Couldn't find skip",
+	"couldntRecruitMoreTroops": "Could not recruit more troops",
+
+	"horseSettings": "Ustawienia konia",
+	"attackSettings": "Ustawienia ataku",
+	"useFeather": "Używać piórek",
+	"useCoin": "Używać monet",
+	"useTimeSkips": "Używać pomijaczy czasu",
+	"attackLeft": "Atakować lewą flanke",
+	"attackMiddle": "Atakować środek",
+	"attackRight": "Atakować prawą flanke",
+	"attackCourtyard": "Atakować dziedziniec",
+	"maxWaves": "Maksymalna ilość fal",
+	
+	"useFood": "Use food troops",
+	"attackDelaySeconds": "Opóżnienie między atakami (Sekundy)",
+	"attackDelayRandomizationSeconds": "Zróżnicowanie czasu ataku (Sekundy)",
+	"attackLevel40": "Attack level 40",
+	"attackLevel50": "Attack level 50",
+	"attackLevel60": "Attack level 60",
+	"attackLevel70": "Attack level 70",
+	"attackLevel80": "Attack level 80",
+	"feastFoodReduction": "Feast food reduction",
+	"minimumFood": "Minimum food",
+	"minimumFoodRate": "Minimum food rate",
+	"hours": "Hours",
+	"commanderWhiteList" : "Commander Whitelist",
+	"attackWaves": "Waves",
+	"noEventTools": "No event tools",
+	"lowValueChests": "Low value chests First",
+	"reputation": "Reputation",
+	"wavesTillChests": "Waves till chests",
+	"eventWallToolsFirst": "Event wall tools first",
+	"scoreShutoff": "Score shut off",
+	"eventDifficulty": "Event difficulty",
+	"channelID": "Channel ID",
+	"alertChannelID": "Alert channel ID",
+	"hideDiscordName": "Hide Discord name",
+	"stormChannelID": "Storm channel ID",
+	"level": "Level",
+	"troopType": "Troop type",
+	"randomizeTiming": "Randomize timing",
+	"ladderAmmount": "Ladder ammount",
+	"shieldAmmount": "Shield ammount",
+	"buyDecoration": "Buy decoration",
+	"fastHelp": "Fast Help",
+	"ticketAmmount": "Ticket ammount",
+	"minMightPoints": "Minimum might points",
+	"minCastleTroopCount": "Minimum castle troop count",
+	"minHitTroopCount": "Minimum hit troop count",
+	"stationPlayerName": "Station player name",
+	"stationTime": "Station time",
+	"minTroopSendCount": "Minimum troop send count",
+	"allowLvl40Hard": "Lvl 40",
+	"allowLvl50Hard": "Lvl 50",
+	"allowLvl60Hard": "Lvl 60",
+	"allowLvl70Hard": "Lvl 70",
+	"allowLvl80Hard": "Lvl 80",
+	"allowLvl60Easy": "Lvl 60",
+	"allowLvl70Easy": "Lvl 70",
+	"allowLvl80Easy": "Lvl 80",
+	"buyCoins": "Buy coins",
+	"buyXP": "Buy XP",
+	"noChests": "No chests",
+	"incomingFrom": " from ",
+	"incomingIsAttacking": " is attacking ",
+	"incomingIn": " incoming in ",
+	"incomingClicks" : " clicks"
 }
